--- a/XamarinHello/XamarinHelloBle/XamarinHelloBle.Client/Views/ControllerView.xaml
+++ b/XamarinHello/XamarinHelloBle/XamarinHelloBle.Client/Views/ControllerView.xaml
@@ -4,5 +4,7 @@
              xmlns:prism="http://prismlibrary.com"
              prism:ViewModelLocator.AutowireViewModel="True"
              x:Class="XamarinHelloBle.Client.Views.ControllerView">
-  
+  <StackLayout>
+    <Label Text="Coming soon!" />
+  </StackLayout>
 </ContentPage>
