--- a/XamarinHello/XamarinHelloBle/XamarinHelloBle.Client/Views/MainTabbedView.xaml
+++ b/XamarinHello/XamarinHelloBle/XamarinHelloBle.Client/Views/MainTabbedView.xaml
@@ -3,9 +3,11 @@
             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
             xmlns:prism="http://prismlibrary.com"
             xmlns:views="clr-namespace:XamarinHelloBle.Client.Views"
-            x:Class="XamarinHelloBle.Client.Views.MainView"
+            x:Class="XamarinHelloBle.Client.Views.MainTabbedView"
             prism:ViewModelLocator.AutowireViewModel="True">
+  <TabbedPage.Children>
     <views:ScannerView />
     <views:ControllerView />
     <!--<views:LogView />-->
+  </TabbedPage.Children>
 </TabbedPage>
