--- a/XamarinHello/XamarinHelloBle/XamarinHelloBle.Client/Views/ScannerView.xaml
+++ b/XamarinHello/XamarinHelloBle/XamarinHelloBle.Client/Views/ScannerView.xaml
@@ -7,6 +7,10 @@
              prism:ViewModelLocator.AutowireViewModel="True">
   <ContentPage.Content>
     <StackLayout>
+      <Button Text="Toggle Adapter"
+              Command="{Binding CmdToggleAdapterState}"
+              IsVisible="{Binding CanControlAdapterState}" />
+
       <Button Command="{Binding CmdScan}">
         <Button.Triggers>
           <DataTrigger Binding="{Binding IsScanning}"
@@ -22,10 +26,6 @@
         </Button.Triggers>
       </Button>
 
-      <Button Text="Toggle Adapter"
-              Command="{Binding CmdToggleAdapterState}"
-              IsVisible="{Binding CanControlAdapterState}" />
-
       <CollectionView ItemSizingStrategy="MeasureFirstItem"
                       ItemsSource="{Binding Peripherals}"
                       SelectedItem="{Binding SelectedPeripheral}"
@@ -33,7 +33,7 @@
                       VerticalOptions="FillAndExpand">
         <CollectionView.ItemTemplate>
           <DataTemplate x:DataType="viewModels:PeripheralItemViewModel">
-            <Grid ColumnDefinitions="*,Auto" RowDefinitions="30,30,30,30,30">
+            <Grid ColumnDefinitions="*,Auto" RowDefinitions="30,15,15,15,15">
 
               <Label Text="{Binding Name}"
                      FontAttributes="Bold"
@@ -60,13 +60,24 @@
                      Grid.Row="3"
                      Grid.Column="0" />
 
-              <Label Text="Is Connected"
+              <Label Text="{Binding IsConnected, StringFormat='Is Connected: {0}'}"
                      Grid.Row="4"
                      Grid.ColumnSpan="2"
-                     BackgroundColor="Yellow"
                      HorizontalTextAlignment="Center"
-                     IsVisible="{Binding IsConnected}"
-                     TextColor="Black" />
+                     TextColor="Black">
+                <Label.Triggers>
+                  <DataTrigger Binding="{Binding IsConnected}"
+                               TargetType="Label"
+                               Value="True">
+                    <Setter Property="BackgroundColor" Value="Green" />
+                  </DataTrigger>
+                  <DataTrigger Binding="{Binding IsConnected}"
+                               TargetType="Label"
+                               Value="False">
+                    <Setter Property="BackgroundColor" Value="Yellow" />
+                  </DataTrigger>
+                </Label.Triggers>
+              </Label>
             </Grid>
           </DataTemplate>
         </CollectionView.ItemTemplate>
